# certificate-verifier

./: .gitignore  DEMO_CHECKLIST.md  README.md
anchor/: Anchor.toml  package.json
anchor/programs/certichain/: Cargo.toml
anchor/programs/certichain/src/: lib.rs
anchor/tests/: certichain.ts
app/: next.config.js  package-lock.json  package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/admin/: page.tsx
app/src/app/bulk/: page.tsx
app/src/app/dashboard/: page.tsx
app/src/app/issue/: page.tsx
app/src/app/verify/: page.tsx
app/src/app/verify/[pubkey]/: page.tsx
app/src/components/: AnimatedBackground.tsx  BulkUploader.tsx  CertificateCard.tsx  Footer.tsx  Navbar.tsx  QRGenerator.tsx  WalletProvider.tsx
app/src/hooks/: useCertiChain.ts  useWalletAuth.ts
app/src/idl/: certichain.json  certichain_types.ts
app/src/lib/: anchor.ts  constants.ts  utils.ts
