[package]
name = "certichain"
version = "0.1.0"
description = "CertiChain — On-chain certificate issuance and verification on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "certichain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
